@@ -1,4 +1,6 @@
 Changes to 1.2.6 +nb
+[CHANGES]
+*lib/buffs.php -> added strip_companion($name) which removes one or more companions safely
 [FIXES]
 *lib/all_tables.php and several --> 0000-00-00 00:00:00 is not valid DATETIME since MySQL 5.7 anymore. Hence, new constants DATETIME_DATEMIN and _DATEMAX have been introduced in lib/constants.php. Default is set to 1970-01-01 ... and 2159-01-01 ... - max could be 9999-12-31, but if I get older than 160 years, I'll fix that for you
 *motd.php --> critical SQL injection attack fix. Month in httppost was not escaped and directly patched into an SQL query!
